<?xml version="1.0"?>
<package format="3">
  <name>isrl_fwmax_nav2</name>
  <version>0.0.1</version>
  <description>Navigation launch package for Nav2</description>

  <maintainer email="jhgod@example.com">jhgod</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>nav2_bringup</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>