<?xml version="1.0"?>
<package format="3">
  <name>isrl_fwmax_slam</name>
  <version>0.0.1</version>
  <description>Launch and parameter package for slam_toolbox</description>

  <maintainer email="jhgod@example.com">jhgod</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>slam_toolbox</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
